--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
     <nav>
         <ul class="nav-links">
-            <li><a class="nav-link", onclick="window.href.location('https://twitter.com/enginergaming')">Home</a></li>
+            <li><a class="nav-link", onclick="location.href =('https://twitter.com/enginergaming')">Home</a></li>
             <li><a class="nav-link" href="#">Game servers</a></li>
             <li><a class="nav-link" href="#">Gaming</a></li>
             <li><a class="nav-link" href="#">Twitter</a></li>
