--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <header>
     <nav>
         <ul class="nav-links">
-            <li><a class="nav-link", onclick="location.href =('https://twitter.com/enginergaming')">Home</a></li>
+            <li><a class="nav-link" href="#">Home</a></li>
             <li><a class="nav-link" href="#">Game servers</a></li>
             <li><a class="nav-link" href="#">Gaming</a></li>
-            <li><a class="nav-link" href="#">Twitter</a></li>
+            <li><a class="nav-link", onclick="location.href =('https://twitter.com/enginergaming')">Twitter</a></li>
         </ul>
     </nav>
 </header>
