--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a class="nav-link" href="#">Home</a></li>
             <li><a class="nav-link" href="#">Game servers</a></li>
             <li><a class="nav-link" href="#">Gaming</a></li>
-            <li><a class="nav-link", onclick="location.href =('https://twitter.com/enginergaming')">Twitter</a></li>
+            <li><a class="nav-link", onclick="location.href =('https://sketchycrypt.github.io/placeholder/')", href="#">Twitter</a></li>
         </ul>
     </nav>
 </header>
