--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <header>
     <nav>
         <ul class="nav-links">
-            <li><a class="nav-link" href="#">Home</a></li>
-            <li><a class="nav-link" href="#">Game servers</a></li>
-            <li><a class="nav-link" href="#">Gaming</a></li>
-            <li><a class="nav-link", onclick="location.href =('https://twitter.com/engineergaming_ ')", href="#">Twitter</a></li>
+            <li><a class="nav-link" onclick="window.location.href=('https://www.youtube.com/watch?v=lXMskKTw3Bc')">Home</a></li>
+            <li><a class="nav-link" onclick="window.location.href=('https://www.youtube.com/watch?v=lXMskKTw3Bc')">Game servers</a></li>
+            <li><a class="nav-link" onclick="window.location.href=('https://www.youtube.com/watch?v=lXMskKTw3Bc')">Gaming</a></li>
+            <li><a class="nav-link" onclick="window.location.href=('https://www.youtube.com/watch?v=lXMskKTw3Bc')">Twitter</a></li>
         </ul>
     </nav>
 </header>
@@ -28,6 +28,7 @@
 
         now with butter!
     </p>
+    <iframe class="video" width="1177" height="662" src="https://www.youtube.com/embed/4rlaPTf1zlA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
 </body>
 </html>
